<resources>
    <string name="app_name">MultiTool</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawing">Drawing Activity</string>
    <string name="title_activity_movie">Movie Activity</string>
    <string name="title_activity_notepad">Notepad Activity</string>
    <string name="title_activity_reminder">Reminder Activity</string>
    <string name="title_activity_to_do">ToDo Activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notepad">Notepad</string>
    <string name="todo_list">Todo List</string>
    <string name="drawing">Drawing</string>
    <string name="reminder">Reminder</string>
    <string name="movie_list">Movie List</string>
    <string name="choose_one_option">Choose One Option</string>
    <string name="choose_default_app">Choose Default App</string>
    <string name="restart">Please restart the App</string>
    <string name="exit">Exit</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_content">Enter Content</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="line_color">#212121</string>
    <string name="title_new">Title</string>
    <string name="content_new">Content</string>
    <string name="date">Date</string>
    <string name="moving_handle">Moving handle</string>
    <string name="title_is_required">Title is required</string>
    <string name="content_is_required">Content is required</string>
    <string name="save">Save</string>
    <string name="note_list">Note List</string>
    <string name="note_not_saved">Note not saved</string>
    <string name="note_updated">Note Updated</string>
    <string name="must_implement">" must implement OnStartNewFragmentListener"</string>
    <string name="settings">Settings</string>
    <string name="note_editor">Note Editor</string>
    <string name="table_with_id">"Table saved with id: "</string>
    <string name="delete">Delete</string>
    <string name="save_note_before_delete">Save note before deleting !</string>
    <string name="error_empty_note_list">Sorry no previous notes found.\nCreate a new one !</string>
    <string name="delete_with_comma">Delete \'</string>
    <string name="confirmation_before_delete">Are you sure you want to delete \'</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_confirmation">Do you want to exit from MultiTool ?</string>
    <string name="question">\' ?</string>
    <string name="note_deleted">Note is deleted</string>
    <string name="todo_items">ToDo Items</string>
    <string name="note_back">#ffe0b2</string>
    <string name="add_todo_item">Add Todo Item</string>
    <string name="todo_item">Todo Item</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="choose_brush_size">Choose Brush Size</string>
</resources>
