<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context="com.zeus.multiuseapp.common.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/teal_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/choose_default_app"
                android:textColor="@color/cardview_light_background"
                android:textSize="30sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="5"
            android:elevation="2dp"
            app:cardBackgroundColor="@color/teal_light"
            app:cardCornerRadius="5dp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp">

                <RadioButton
                    android:id="@+id/radioNotepad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/notepad"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/radioTodo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/todo_list"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/radioDrawing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/drawing"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/radioReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/reminder"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/radioMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/movie_list"
                    android:textSize="25sp" />
            </RadioGroup>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>
