<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="90dp"
              android:background="@color/note_back"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@color/note_back"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/noteListTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/note_back"
            android:fontFamily="sans-serif"
            android:gravity="left|center"
            android:paddingLeft="15dp"
            android:text="@string/title_new"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noteListCreated"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/note_back"
            android:fontFamily="sans-serif-condensed"
            android:gravity="left|center"
            android:paddingLeft="15dp"
            android:text="@string/date"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:targetApi="jelly_bean"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/handle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/note_back"
        android:contentDescription="@string/moving_handle"
        android:src="@drawable/ic_reorder_black_24px" />
</LinearLayout>
